Fix buttons overflowing with long titles

--- a/static/less/composer.less
+++ b/static/less/composer.less
@@ -37,6 +37,10 @@
 		min-height: 40px;
 		margin: 0;
 
+		.btn-group {
+			flex-shrink: 0;
+		}
+
 		button {
 			font-size: 20px;
 		}
@@ -51,10 +55,8 @@
 			flex-grow: 2;
 			font-size: 16px;
 			line-height: inherit;
-		}
-
-		.category-name-container {
 			padding: 9px 5px;
+			margin: 0;
 		}
 	}
 
